Cache the D3 libraries locally.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   </span>
   <span id="h2">
   </span>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="https://rawgithub.com/misoproject/d3.chart/master/d3.chart.min.js"></script>
+  <script src="lib/d3.v3.min.js"></script>
+  <script src="lib/d3.chart.min.js"></script>
   <script src="data.js"></script>
   <script src="d3.chart.BaseChart.js"></script>
   <script src="d3.chart.Histogram.js"></script>
