Remove second histogram container.

--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
   <h1>D3 histogram test</h1>
   <span id="h1">
   </span>
-  <span id="h2">
-  </span>
   <script src="lib/d3.v3.min.js"></script>
   <script src="lib/d3.chart.min.js"></script>
   <script src="data.js"></script>
   <script src="d3.chart.BaseChart.js"></script>
+  <script src="d3.chart.AxesChart.js"></script>
   <script src="d3.chart.Histogram.js"></script>
   <script src="d3.chart.HistogramZoom.js"></script>
   <script src="histogram.js"></script>
