Update examples to show two histograms.

--- a/examples/index.html
+++ b/examples/index.html
@@ -10,6 +10,8 @@
   <h1>D3 histogram test</h1>
   <span id="h1">
   </span>
+  <span id="h2">
+  </span>
   <script src="javascripts/lib/d3.v3.min.js"></script>
   <script src="javascripts/lib/d3.chart.min.js"></script>
   <script src="javascripts/data.js"></script>
