Add a simple histogram to the examples for easier debugging.

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,8 @@
   </span>
   <span id="h2">
   </span>
+  <span id="h3">
+  </span>
   <script src="javascripts/lib/d3.v3.min.js"></script>
   <script src="javascripts/lib/d3.chart.min.js"></script>
   <script src="javascripts/data.js"></script>
