the html example page now shows also the 2D histogram

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,10 +14,15 @@
   </span>
   <span id="h3">
   </span>
+
+  <span id="h4">
+  </span>
+
   <script src="javascripts/lib/d3.v3.min.js"></script>
   <script src="javascripts/lib/d3.chart.min.js"></script>
   <script src="javascripts/data.js"></script>
-  <script src="../dist/d3.chart.histograms.js"></script>
+  <script src="javascripts/data2D.js"></script>
+  <script src="../dist/d3.chart.histograms.js?n=1"></script>
   <script src="javascripts/examples.js"></script>
 </body>
 </html>
