--- a/examples/index.html
+++ b/examples/index.html
@@ -12,11 +12,13 @@
   </span>
   <span id="h2">
   </span>
+  <span id="h3">
+  </span>
 
   <script src="javascripts/lib/d3.v3.min.js"></script>
   <script src="javascripts/lib/d3.chart.min.js"></script>
   <script src="javascripts/data.js"></script>
-  <script src="javascripts/data2D.js"></script>
+  <script src="javascripts/data2d.js"></script>
   <script src="../dist/d3.chart.histograms.js?n=1"></script>
   <script src="javascripts/examples.js"></script>
 </body>
