--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,8 @@
   </span>
   <span id="h3">
   </span>
+  <span id="h4">
+  </span>
 
   <script src="javascripts/lib/d3.v3.min.js"></script>
   <script src="javascripts/lib/d3.chart.min.js"></script>
