Add option for logarithmic scales on x and y axes.

--- a/examples/index.html
+++ b/examples/index.html
@@ -10,6 +10,8 @@
   <h1>D3 histogram test</h1>
   <span id="h1">
   </span>
+  <span id="h1-log">
+  </span>
   <span id="h2">
   </span>
   <span id="h3">
