Add option for time scale on x-axis.

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,11 +18,14 @@
   </span>
   <span id="h4">
   </span>
+  <span id="h5">
+  </span>
 
   <script src="javascripts/lib/d3.v3.min.js"></script>
   <script src="javascripts/lib/d3.chart.min.js"></script>
   <script src="javascripts/data.js"></script>
   <script src="javascripts/data2d.js"></script>
+  <script src="javascripts/data_time_series.js"></script>
   <script src="../dist/d3.chart.histograms.js?n=1"></script>
   <script src="javascripts/examples.js"></script>
 </body>
